[*]首页轮播图完成

--- a/assets/common.scss
+++ b/assets/common.scss
@@ -58,3 +58,12 @@
   }
 }
 
+.flex-bottom-center {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: end;
+  align-items: flex-end;
+  -webkit-box-pack: center;
+  justify-content: center;
+}
+
