--- a/assets/pc.scss
+++ b/assets/pc.scss
@@ -10,7 +10,7 @@
       }
     }
   }
-  .index-container {
+  .index-container, .pageGuestbook, .pageLinks {
     margin: 0 auto;
     max-width: 1080px !important;
   }
