--- a/assets/mobile.scss
+++ b/assets/mobile.scss
@@ -17,7 +17,7 @@
     }
   }
 
-  .index-container {
+  .index-container, .pageGuestbook, .pageLinks {
     margin: 0 auto;
     max-width: 760px !important;
   }
