--- a/assets/mobile.scss
+++ b/assets/mobile.scss
@@ -22,6 +22,10 @@
     max-width: 760px !important;
   }
 
+  .index-container {
+    padding: 0px 24px 40px;
+  }
+
   .v-footer {
     a {
       font-size: 15px !important;
