--- a/assets/index.scss
+++ b/assets/index.scss
@@ -64,6 +64,11 @@
         background-color: #2f3133;
       }
     }
+    .pageEditor {
+      .v-text-field--solo > .v-input__control > .v-input__slot {
+        background: #2f3133;
+      }
+    }
   }
 
   &.theme--light {
